--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,12 @@
 
 .navbar{
     padding-left: 50px;
-    line-height: 50px;
+    text-align: center;
+    line-height: 70px;
     background-color: #87CFF8;
     width: 20%;
     height: 100vh;
-    padding: 20px;
+    width: 320px;
 }
 
 .navbar h1{
@@ -40,5 +41,138 @@
 }
 
 .profile{
- margin-top: 100%; 
+display: flex;
+ margin-top: 30%; 
 }
+.profile img{
+    height: 100px;
+    width: 100px;
+    border-radius: 90px;
+    margin-right: 20px;
+}
+.search{
+    width: 100%;
+}
+.main-div{
+    display:flex;
+    /* background-color: aqua; */
+    } 
+.head-div{
+    display: flex; 
+    height: 150px;
+    display: flex;
+    background-color: #EFF3F9;
+    width: 100%;
+}
+.head-div h1{
+    margin-top: 10px;
+    margin-left: 20px;
+    font-size: 3rem;
+}
+.search-div{
+    margin: 70px 0px;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    
+}
+.search-div label{
+    font-size: 1.5rem;
+    padding-right: 10px;
+ 
+}
+.div-option{
+    padding-top: 30px;
+    padding-left: 30px;
+}
+ #lists{
+    height: 40px;
+    width: 60vh;
+    border-radius: 20px;
+}
+.container{
+    width: 100%;
+    margin-top: 6vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-body{
+    height: 30vh;
+    width: 80%;
+    display: flex;
+    background-color: #EFF3F9;
+    align-items: center;
+    justify-content: center;
+    line-height: 2rem;
+    margin-bottom: 50px;
+}
+.card-body img{
+    height: 100px;
+    width: 100px;
+    margin-right: 60px;
+    margin-left: 20px;
+    border-radius: 90px;
+}
+
+
+.card-body p{
+    width: 70%;
+}
+.btn{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 30px;
+}
+.card-body button{
+   border-radius: 15px;
+   border: none;
+   background-color: white;
+   padding: 6px; 
+   width: 80px;
+}
+
+.section-left img{
+    height: 100px;
+    width: 100px;
+    margin-top: 20px;
+    margin-right: 50px;
+    margin-left: 50px;
+    border-radius: 90px;
+}
+.separator{
+    width: 5px;
+    background-color: black;
+    height:80%;
+    margin-left: 50px;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+}
+.section-body{
+    display: flex;
+}
+.div-left{
+    margin-left: 50px;
+}
+.section-right h2{
+    margin-top: 40px;
+}
+.div-right{
+    margin-top: 30vh;
+}
+
+
+/* @media screen and (max-width: 768px) {
+    .main-div{
+        display: block;
+    }
+    .navbar{
+        width: 100%;
+    }
+    #profile{
+        display: none;
+    }
+    
+} */
