--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,15 @@
 }
 
 .navbar{
-    padding-left: 50px;
+    padding: 10px;
     text-align: center;
     line-height: 70px;
     background-color: #87CFF8;
-    width: 20%;
+    width: 30%;
     height: 100vh;
-    width: 320px;
+}
+.navbar a:hover{
+    background-color:  #EFF3F9;
 }
 
 .navbar h1{
@@ -19,7 +21,7 @@
 .top h1 a{
     width: 100%; 
     font-weight: bolder;
-    font-size: 2.2rem;
+    font-size: 2rem;
     color: black;
     background-color:white;
     border: 1 solid;
@@ -55,8 +57,7 @@ display: flex;
 }
 .main-div{
     display:flex;
-    /* background-color: aqua; */
-    } 
+}
 .head-div{
     display: flex; 
     height: 150px;
@@ -137,32 +138,71 @@ display: flex;
 .section-left img{
     height: 100px;
     width: 100px;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-right: 50px;
     margin-left: 50px;
     border-radius: 90px;
 }
 .separator{
-    width: 5px;
+    width: 6px;
     background-color: black;
-    height:80%;
-    margin-left: 50px;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    height:90%;
+    /* margin-left: 50px; */
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 .section-body{
     display: flex;
+
 }
 .div-left{
-    margin-left: 50px;
+    margin-left: 40px;
+}
+.section-right h1{
+    margin-top: 20px;
 }
 .section-right h2{
-    margin-top: 40px;
+    margin-top: 20px;
+}
+.section-right{
+    margin-top: 0px;
+    margin-left: 10px;
 }
 .div-right{
-    margin-top: 30vh;
+    margin-top: 20px;
+    margin-left: 20px;
+    background-color: #EFF3F9;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    padding: 10px;
 }
-
+.div-right img{
+    height: 60px;
+    width: 60px;
+    margin-top: 0;
+    margin-right: 60px;
+    margin-left: 20px;
+    border-radius: 30px;
+}
+.div-right h3{
+    margin-bottom: 5px;
+}
+.div-right p{
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-right: 20px;
+}
+.div-right button{
+    border-radius: 15px;
+    border: none;
+    background-color: white;
+    padding: 6px; 
+    width: 80px;
+ }
 
 /* @media screen and (max-width: 768px) {
     .main-div{
