--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     text-align: center;
     line-height: 70px;
     background-color: #87CFF8;
-    width: 30%;
+    min-width: 20%;
     height: 100vh;
 }
 .navbar a:hover{
@@ -18,15 +18,18 @@
    margin-top: 0px;
    
 }
-.top h1 a{
-    width: 100%; 
+.top{
+
+}
+.top{
+    width: 90%; 
     font-weight: bolder;
-    font-size: 2rem;
+    font-size:1.8rem;
     color: black;
     background-color:white;
     border: 1 solid;
     border-radius: 15px;
-    padding: 10px;
+    /* padding: 5px; */
     margin-top: 15px;
 }
 .navbar ul{
