--- a/src/Recherche.css
+++ b/src/Recherche.css
@@ -9,6 +9,7 @@
     background-color: #87CFF8;
     min-width: 20%;
     height: 100vh;
+    position: fixed;
 }
 .navbar a:hover{
     background-color:  #EFF3F9;
@@ -18,9 +19,7 @@
    margin-top: 0px;
    
 }
-.top{
 
-}
 .top{
     width: 90%; 
     font-weight: bolder;
@@ -79,7 +78,7 @@ display: flex;
     align-items: center;
     justify-content: center;
     height: 40px;
-    
+    margin-left: 200px;
 }
 .search-div label{
     font-size: 1.5rem;
@@ -101,6 +100,7 @@ display: flex;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 150px;
 }
 
 .card-body{
@@ -117,7 +117,7 @@ display: flex;
     height: 100px;
     width: 100px;
     margin-right: 60px;
-    margin-left: 20px;
+    margin-left: 60px;
     border-radius: 90px;
 }
 
@@ -156,7 +156,6 @@ display: flex;
 }
 .section-body{
     display: flex;
-
 }
 .div-left{
     margin-left: 40px;
@@ -169,7 +168,8 @@ display: flex;
 }
 .section-right{
     margin-top: 0px;
-    margin-left: 10px;
+    margin-left: 150px;
+
 }
 .div-right{
     margin-top: 20px;
