--- a/src/Recherche.css
+++ b/src/Recherche.css
@@ -32,7 +32,6 @@ a{
     background-color:white;
     border: 1 solid;
     border-radius: 15px;
-    /* padding: 5px; */
     margin-top: 15px;
 }
 .navbar ul{
@@ -74,17 +73,13 @@ display: flex;
 }
 
 .search-div{
-    margin: 70px 0px;  
+    margin: 30px 0px;  
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 40px;
-<<<<<<< HEAD:src/App.css
-    
-    
-=======
+    /* height: 40px; */
     margin-left: 200px;
->>>>>>> fe9b675d700cc3f30c1e3e2c89e663f92403a725:src/Recherche.css
+
 }
 .search-div label{
     font-weight: bold;
@@ -110,7 +105,7 @@ display: flex;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 150px;
+    /* margin-left: 150px; */
 }
 
 .card-body{
@@ -222,6 +217,7 @@ display: flex;
  @media screen and (max-width: 768px) {
     .main-div{
         display: block;
+
     }
     .navbar{
         width: 100%;
@@ -235,15 +231,20 @@ display: flex;
 } 
 @media screen and (max-width: 1122px){
 
+    .search-div{
+        margin: 0px;
+        display: block;
+        padding-top: 127px; 
+    }
+
     #lists{
         width: 100%;
-    }
-    .search-div{
         display: block;
     }
 
    .btn{
         display: block;
+        margin: 10px;
     }
     .card-body{
        line-height: normal;
