--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
-*{
+* {
     margin: 0;
 }
-a{
+
+a {
     text-decoration: none;
 }
 
-.navbar{
+.navbar {
     padding: 10px;
     text-align: center;
     line-height: 70px;
@@ -15,43 +16,245 @@ a{
     height: 100vh;
     position: fixed;
 }
-.navbar a:hover{
-    background-color:  #EFF3F9;
+
+.navbar a:hover {
+    background-color: #EFF3F9;
 }
 
-.navbar h1{
-   margin-top: 0px;
-   
-}
-
-.top{
-    width: 90%; 
+.top {
+    width: 90%;
     font-weight: bolder;
     font-size: 1.5rem;
+}
+
+.navbar h1 {
+    margin-top: 0px;
+}
+
+.top {}
+
+.top {
+    width: 90%;
+    font-weight: bolder;
+    font-size: 1.8rem;
     color: black;
-    background-color:white;
+    background-color: white;
     border: 1 solid;
     border-radius: 15px;
     /* padding: 5px; */
     margin-top: 15px;
 }
-.navbar ul{
+
+.navbar ul {
     display: inline;
     list-style: none;
 }
+
 .navbar a {
+    text-decoration: none;
     color: black;
     font-size: 1.5rem;
-    font-weight: bold; 
+    font-weight: bold;
 }
 
-.profile{
-display: flex;
- margin-top: 30%; 
+.profile {
+    display: flex;
+    margin-top: 30%;
 }
-.profile img{
+
+.profile img {
     height: 100px;
     width: 100px;
     border-radius: 90px;
     margin-right: 20px;
+}
+
+.search {
+    width: 100%;
+}
+
+.main-div {
+    display: flex;
+}
+
+.head-div {
+    display: flex;
+    height: 150px;
+    display: flex;
+    background-color: #EFF3F9;
+    width: 100%;
+}
+
+.head-div h1 {
+    margin-top: 10px;
+    margin-left: 20px;
+    font-size: 3rem;
+}
+
+.search-div {
+    margin: 70px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+
+}
+
+.search-div label {
+    font-size: 1.5rem;
+    padding-right: 10px;
+
+}
+
+.div-option {
+    padding-top: 30px;
+    padding-left: 30px;
+}
+
+#lists {
+    height: 40px;
+    width: 60vh;
+    border-radius: 20px;
+}
+
+.container {
+    width: 100%;
+    margin-top: 6vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-body {
+    height: 30vh;
+    width: 80%;
+    display: flex;
+    background-color: #EFF3F9;
+    align-items: center;
+    justify-content: center;
+    line-height: 2rem;
+    margin-bottom: 50px;
+}
+
+.card-body img {
+    height: 100px;
+    width: 100px;
+    margin-right: 60px;
+    margin-left: 20px;
+    border-radius: 90px;
+}
+
+
+.card-body p {
+    width: 70%;
+}
+
+.btn {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 30px;
+}
+
+.card-body button {
+    border-radius: 15px;
+    border: none;
+    background-color: white;
+    padding: 6px;
+    width: 80px;
+}
+
+.section-left img {
+    height: 100px;
+    width: 100px;
+    margin-top: 40px;
+    margin-right: 50px;
+    margin-left: 50px;
+    border-radius: 90px;
+}
+
+.separator {
+    width: 6px;
+    background-color: black;
+    height: 90%;
+    /* margin-left: 50px; */
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.section-body {
+    display: flex;
+
+}
+
+.div-left {
+    margin-left: 40px;
+}
+
+.section-right h1 {
+    margin-top: 20px;
+}
+
+.section-right h2 {
+    margin-top: 20px;
+}
+
+.section-right {
+    margin-top: 0px;
+    margin-left: 10px;
+}
+
+.div-right {
+    margin-top: 20px;
+    margin-left: 20px;
+    background-color: #EFF3F9;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.div-right img {
+    height: 60px;
+    width: 60px;
+    margin-top: 0;
+    margin-right: 60px;
+    margin-left: 20px;
+    border-radius: 30px;
+}
+
+.div-right h3 {
+    margin-bottom: 5px;
+}
+
+.div-right p {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-right: 20px;
+}
+
+.div-right button {
+    border-radius: 15px;
+    border: none;
+    background-color: white;
+    padding: 6px;
+    width: 80px;
+}
+
+
+@media screen and (max-width: 768px) {
+    .main-div {
+        display: block;
+    }
+
+    .navbar {
+        width: 50%;
+    }
+
+    #profile {
+        display: none;
+    }
+
 }
