--- a/src/offres.css
+++ b/src/offres.css
@@ -69,3 +69,34 @@
     padding: 6px; 
     width: 80px;
  }
+
+ @media screen and (max-width: 768px) {
+    .main-div{
+        margin: 0;
+        padding: 0;
+        display: block;
+
+    }
+    .navbar{
+        width: 100%;
+        height: 100px;
+    }
+    .profile, .navbar ul{
+        display: none;
+    }
+    .section-body{
+        margin: 0;
+        display: block;
+    }
+    .section-right{
+        margin-left: 0;
+    }
+    .section-left{
+        display: block;
+    }
+}
+@media screen and (max-width: 1122px){
+    .section-body{
+        display: block;   
+    }
+}
