--- a/src/voirPlus.css
+++ b/src/voirPlus.css
@@ -6,8 +6,8 @@
 
 .offer{
     /* background:red; */
-    margin-left:320px;
-    width:100%;
+    margin-left:300px;  
+    width:80%;
 }
 .offer a{
     color:white;
@@ -15,7 +15,7 @@
 .offer-top{
     /* background-color: yellow; */
     display: flex;
-    margin-left: 80px;
+    margin-left: 70px;
 }
 
 .offer-top img{
@@ -38,7 +38,7 @@
 }
 
 .offer-bottom{
-    margin-left: 400px;
+    margin-left: 100px;
     margin-top: 0px;
     font-size: 20px;
 }
@@ -49,8 +49,10 @@
 
 .offer-btn{
     display: flex;
-    width: 80%;
+    width: 70%;
     justify-content: space-between;
+    /* background-color: blue; */
+    margin-left: 150px;
 }
 
 .offer-btn button{
@@ -60,8 +62,8 @@
     align-items: center;
     border-radius: 20px;
     height: 50px;
-    width: 200px;
-    font-size: 25px;
+    width: 450px;
+    font-size: 20px;
     background-color: #87CFF8;
 }
 
