--- a/src/offres.css
+++ b/src/offres.css
@@ -49,6 +49,15 @@
     padding: 6px; 
     width: 80px;
  }
+ .card-body p{
+    width: 70%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+            line-clamp: 2; 
+    -webkit-box-orient: vertical;
+ }
 
  @media screen and (max-width: 768px) {
     .main-div{
@@ -56,10 +65,6 @@
         padding: 0;
         display: block;
 
-    }
-    .navbar{
-        width: 100%;
-        height: 100px;
     }
     .profile, .navbar ul{
         display: none;
@@ -89,7 +94,4 @@
         
         display:block;
     }
-}
-@media screen and (max-width: 1122px){
-  
 }
