--- a/src/voirPlus.css
+++ b/src/voirPlus.css
@@ -88,9 +88,9 @@
 }
 
 @media screen and (max-width: 768px) {
-    .main-div{
+    /* .main-div{
         display: block;
-    }
+    } */
     .navbar{
         width: 100%;
         height: 100px;
