update finito pipo

--- a/src/Recherche.css
+++ b/src/Recherche.css
@@ -12,9 +12,9 @@
     background-color: #EFF3F9;
     width: 100%;
 }
-.search{
+/* .search{
     margin-left: 120px;
-}
+} */
 
 .search-div{
     margin: 30px 0px;  
@@ -23,7 +23,7 @@
     justify-content: center;
     height: 40px;
 
-}
+}   
 .search-div label{
     font-weight: bold;
     font-size: 2.5rem;
@@ -33,21 +33,16 @@
 .div-option{
     padding-top: 30px;
     padding-left: 30px;
+    margin-bottom:30px
+}
+.div-option h1{
+    padding-left: 50px;
 }
  #lists{
      text-align: center;
     height: 50px;
     border-radius: 20px;
     font-size: 1.5rem;
-}
-
-.container{
-    width: 100%;
-    margin-top: 6vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px;
 }
 
 .card-body{
@@ -59,18 +54,18 @@
     word-break: break-all;
     margin-left: 20px;
     box-shadow: 0px 0px 10px 3px#00345030;
-    width: 80%;
+    width: 50vw;
     border-radius: 10px;
     height: 30vh;
     align-items: center;
     line-height: 2rem;
 }
 .card-body img{
-    height: 100px;
-    width: 100px;
+    height: 140px;
+    width: 140px;
     margin-right: 60px;
     margin-left: 60px;
-    border-radius: 90px;
+    border-radius: 120px;
 }
 .card-info{
     width: 70%;
@@ -99,7 +94,9 @@
 .card-body a{
     color: white;
 }
-
+.container{
+    padding:0 
+}
 
 
  @media screen and (max-width: 768px) {
@@ -116,10 +113,7 @@
      .search{
          padding: 0;
      }
-    .container{
-        width: 100%;
-    }
-    
+
 } 
 @media screen and (max-width: 1122px){
 
