--- a/src/App.css
+++ b/src/App.css
@@ -69,13 +69,18 @@ body{
 .profile {
     display: flex;
     margin-top: 30%;
+    
+
 }
 
 .profile img {
-    height: 100px;
-    width: 100px;
-    border-radius: 90px;
-    margin-right: 20px;
+    height: 140px;
+    width: 140px;
+    border-radius: 120px;
+    margin-left: 30px;
+}
+.profile p{
+    padding-left: 20px;
 }
 
 .search{
@@ -104,14 +109,6 @@ body{
     height: 40px;
     width: 60vh;
     border-radius: 20px;
-}
-
-.container {
-    width: 100%;
-    margin-top: 6vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .card-body img {
