--- a/src/Form.css
+++ b/src/Form.css
@@ -9,7 +9,20 @@ input[type=text], select, textarea {
     margin-bottom: 16px;
     resize: vertical 
   }
+.container-form{
+  margin-left: 400px;
+  height: 100VH;
+  width: 50%;
+}
+.container-form h1{
+  margin-top: 80PX;
+  margin-bottom: 60px;
+}
+.container-form form{
+  margin-top: 50px;
+  margin-left: 30px;
 
+}
   input[type=submit] {
   background-color: #04AA6D;
   color: white;
@@ -18,14 +31,30 @@ input[type=text], select, textarea {
   border-radius: 4px;
   cursor: pointer;
 }
+.container-recherche{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px;
+  background: orange;
+}
+.container-recherche form{
+  margin-left: 30vw;
+}
+.container-recherche label{
+  font-size: large;
+  font-weight: bold;
+  line-height: 30px;
+}
 
 @media screen and (max-width: 768px) {
   .main-div{
     margin: 0;
+    width: 100%;
    
   }
-  .container{
-    padding: 0;
-    display: block;
+  .container-recherche{
+    margin-top: 150px;
   }
+
 }
