--- a/src/voirPlus.css
+++ b/src/voirPlus.css
@@ -19,7 +19,6 @@
     margin-left: 70px;
 }
 
-<<<<<<< HEAD
 .description-offer{
     width:90%;
     padding:1rem;
@@ -27,9 +26,6 @@
     
 }
 .offer-top img{
-=======
-.offer-top img {
->>>>>>> a8c4308425004ab18e1a904f4a86d7f693b8d641
     height: 180px;
     width: 180px;
     border-radius: 100px;
@@ -72,7 +68,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 20px;
-    height: 50px;
+    height: 40px;
     width: 450px;
     font-size: 20px;
     background-color: #0c181f;
@@ -132,4 +128,12 @@
     .search {
         margin-left: 0;
     }
+}
+
+.msg-top{
+    background: #003450;
+    padding:2rem;
+    color:white;
+    text-align: end;
+    font-size: 1.2rem;
 }
