--- a/src/App.css
+++ b/src/App.css
@@ -111,13 +111,13 @@ body{
     border-radius: 20px;
 }
 
-.card-body img {
+/* .card-body img {
     height: 100px;
     width: 100px;
     margin-right: 60px;
     margin-left: 20px;
     border-radius: 90px;
-}
+} */
 .card-body p{
     width: 70%;
 }
