--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 a {
     text-decoration: none;
 }
+
 button{
   background-color: #04AA6D !important;
   color: white;
@@ -33,6 +34,7 @@ body{
 
 .navbar li:hover {
     background-color: hsl(201, 100%, 22%);
+    border:1px solid white;
 }
 
 
