--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,8 @@ body{
     background-color: rgb(218, 218, 218);
     border-radius: 30px;
     width:250px;
+    margin-top:15px;
+    margin-bottom:15px;
     display: flex;
     justify-content: center;
     text-transform: capitalize;
