--- a/src/History.css
+++ b/src/History.css
@@ -7,3 +7,19 @@
   display: flex;
   background-color: blue;
 }
+.top-title{
+  margin-top: 80px !important   ;
+  margin-bottom: 60px;
+  font-size: 1.9rem;
+}
+
+
+.card-left p{
+  width: 70%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical
+}
