--- a/src/Recherche.css
+++ b/src/Recherche.css
@@ -18,15 +18,17 @@
 
 .search-div{
     margin: 30px 0px;  
+    margin-left:200px;
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
+    flex-direction: column;
     height: 40px;
 
 }   
 .search-div label{
     font-weight: bold;
-    font-size: 2.5rem;
+    font-size: 1.4rem;
     padding-right: 10px;
  
 }
