--- a/src/loginpage.css
+++ b/src/loginpage.css
@@ -94,5 +94,9 @@
   }
 
   .login-form{
-      margin-top:200px
+      margin-top:100px
+  }
+  .login-form p{
+      display: flex;
+      flex-direction: column;
   }
