--- a/src/loginpage.css
+++ b/src/loginpage.css
@@ -93,10 +93,19 @@
     /* margin-top:50px */
   }
 
-  .login-form{
+  /* .login-form{
       margin-top:100px
-  }
+  } */
   .login-form p{
       display: flex;
       flex-direction: column;
+  }
+  .login-top{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  .login-top img{
+      height:150px;
+      width:150px;
   }
