--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body{
 
 .navbar li:hover {
     background-color: hsl(201, 100%, 22%);
-    border:1px solid white;
+    /* border:1px solid white; */
 }
 
 
