--- a/src/Recherche.css
+++ b/src/Recherche.css
@@ -17,14 +17,13 @@
 } */
 
 .search-div{
-    margin: 30px 0px;  
     margin-left:200px;
+    margin-top:60px;
     display: flex;
     align-items: start;
     justify-content: center;
     flex-direction: column;
     height: 40px;
-
 }   
 .search-div label{
     font-weight: bold;
